# storesystem

./: .gitignore  main.py  pyproject.toml
backend/: main.py  pyproject.toml
backend/app/: main.py
backend/src/storesystem/: exceptions.py  models.py
backend/src/storesystem/app/api/: main.py  supabase_client.py
backend/src/storesystem/app/api/routes/: items.py
frontend/: package-lock.json
frontend/src/: App.tsx  routes.tsx
frontend/src/pages/: Purchase.tsx  Restore.tsx
src/storesystem/: __init__.py
