[project]
name = "storesystem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "supabase>=2.15.0",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
storesystem = "storesystem:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
