[project]
name = "storesystem"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "supabase>=2.15.0",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
storesystem = "backend:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.5",
    "taskipy>=1.14.1",
]


[tool.taskipy.tasks]
serve = "uv run --env-file .env uvicorn storesystem.app.api.main:app --reload --port 8878 --host=0.0.0.0"